--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "express": "~3.2.6",
     "mongoose": "^3.8.14",
-    "q": "^1.0.1"
+    "q": "^1.0.1",
+    "express-jwt" : "",
+    "jsonwebtoken" : ""
   }
 }
