--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "~3.2.6",
     "mongoose": "^3.8.14",
     "q": "^1.0.1",
+    "bcrypt" : "",
     "express-jwt" : "",
     "jsonwebtoken" : ""
   }
