--- a/public/bower.json
+++ b/public/bower.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "ng-file-upload": "~1.6.12",
-    "jquery.easy-pie-chart": "~2.1.4"
+    "jquery.easy-pie-chart": "~2.1.4",
+    "d3": "~3.4.13"
   }
 }
