--- a/public/bower.json
+++ b/public/bower.json
@@ -22,7 +22,8 @@
     "ng-file-upload": "~1.6.12",
     "jquery.easy-pie-chart": "~2.1.4",
     "d3": "~3.4.13",
-    "angularjs-nvd3-directives": "~0.0.7"
+    "angularjs-nvd3-directives": "~0.0.7",
+    "angular-xeditable": "~0.1.8"
   },
   "resolutions": {
     "d3": "~3.4.13"
