--- a/public/bower.json
+++ b/public/bower.json
@@ -23,7 +23,8 @@
     "jquery.easy-pie-chart": "~2.1.4",
     "d3": "~3.4.13",
     "angularjs-nvd3-directives": "~0.0.7",
-    "angular-xeditable": "~0.1.8"
+    "angular-xeditable": "~0.1.8",
+    "angular-translate": "~2.4.1"
   },
   "resolutions": {
     "d3": "~3.4.13"
