--- a/public/bower.json
+++ b/public/bower.json
@@ -26,7 +26,8 @@
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-xeditable": "~0.1.8",
     "angular-translate": "~2.4.1",
-    "nvd3": "~1.1.15-beta"
+    "nvd3": "~1.1.15-beta",
+    "allmighty-autocomplete": "*"
   },
   "resolutions": {
     "d3": "~3.4.13"
