--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "",
     "mongoose": "^3.8.14",
     "q": "^1.0.1",
+    "underscore": "^1.7.0",
     "xlsx": "^0.7.12",
     "zombie": "^2.0.8"
   }
