--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "~3.2.6",
     "express-jwt": "",
     "jschardet": "^1.1.0",
+    "jsdom": "^1.0.3",
     "jsonwebtoken": "",
     "mongoose": "^3.8.14",
     "q": "^1.0.1",
