--- a/public/bower.json
+++ b/public/bower.json
@@ -29,7 +29,8 @@
     "nvd3": "~1.1.15-beta",
     "allmighty-autocomplete": "*",
     "angular-bootstrap-colorpicker": "~3.0.8",
-    "angular-bootstrap": "~0.11.2"
+    "angular-bootstrap": "~0.11.2",
+    "jquery": "~2.1.1"
   },
   "resolutions": {
     "d3": "~3.4.13"
