--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jschardet": "^1.1.0",
     "jsdom": "^1.0.3",
     "jsonwebtoken": "",
+    "memwatch": "^0.2.2",
     "mongoose": "^3.8.14",
     "q": "^1.0.1",
     "request": "^2.48.0",
