Added needed dependencies

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "jschardet": "^1.1.0",
     "jsdom": "^1.0.3",
     "jsonwebtoken": "",
+    "lodash": "^2.4.1",
     "memwatch": "^0.2.2",
     "mongoose": "^3.8.14",
     "q": "^1.0.1",
     "request": "^2.48.0",
+    "sax": "^0.6.1",
     "socket.io": "^1.2.1",
     "stack-trace": "0.0.9",
+    "strip-bom": "^1.0.0",
     "underscore": "^1.7.0",
     "v8-profiler": "^5.2.2",
     "webkit-devtools-agent": "^0.3.1",
