--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "dependencies": {
     "MD5": "^1.2.1",
+    "body-parser": "^1.10.2",
     "crawler": "^0.2.7",
     "csv-parse": "0.0.6",
     "encoding": "^0.1.10",
-    "express": "~3.2.6",
+    "express": "^4.11.1",
     "express-jwt": "",
     "jschardet": "^1.1.0",
     "jsdom": "^1.0.3",
@@ -18,6 +19,7 @@
     "q": "^1.0.1",
     "request": "^2.48.0",
     "sax": "^0.6.1",
+    "serve-static": "^1.8.1",
     "socket.io": "^1.2.1",
     "stack-trace": "0.0.9",
     "strip-bom": "^1.0.0",
