bower dependencies change

--- a/public/bower.json
+++ b/public/bower.json
@@ -20,7 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "ng-file-upload": "~1.6.12",
+    "ng-file-upload": "~2.2.2",
     "jquery.easy-pie-chart": "~2.1.4",
     "d3": "~3.4.13",
     "angularjs-nvd3-directives": "~0.0.7",
@@ -33,6 +33,7 @@
     "jquery": "~2.1.1"
   },
   "resolutions": {
-    "d3": "~3.4.13"
+    "d3": "~3.4.13",
+    "ng-file-upload": "~2.2.2"
   }
 }
