Upload bug when using express 4.0

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lodash": "^2.4.1",
     "memwatch": "^0.2.2",
     "mongoose": "^3.8.14",
+    "multer": "^0.1.7",
     "q": "^1.0.1",
     "request": "^2.48.0",
     "sax": "^0.6.1",
