--- a/public/bower.json
+++ b/public/bower.json
@@ -30,10 +30,12 @@
     "allmighty-autocomplete": "*",
     "angular-bootstrap-colorpicker": "~3.0.8",
     "angular-bootstrap": "~0.11.2",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "angularjs-toaster": "~0.4.10"
   },
   "resolutions": {
     "d3": "~3.4.13",
-    "ng-file-upload": "~2.2.2"
+    "ng-file-upload": "~2.2.2",
+    "angular": "1.3.12"
   }
 }
