--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "MD5": "^1.2.1",
     "body-parser": "^1.10.2",
+    "compression": "^1.4.1",
     "crawler": "^0.2.7",
     "crypto": "0.0.3",
     "csv-parse": "0.0.6",
