--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jsdom": "^1.0.3",
     "jsonwebtoken": "",
     "lodash": "^2.4.1",
-    "memwatch": "^0.2.2",
+    "memwatch-next": "^0.2.10",
     "mongoose": "^3.8.14",
     "multer": "^0.1.7",
     "q": "^1.0.1",
