--- a/public/bower.json
+++ b/public/bower.json
@@ -23,6 +23,9 @@
     "ng-file-upload": "~2.2.2",
     "jquery.easy-pie-chart": "~2.1.4",
     "d3": "~3.4.13",
+    "angular": "1.4.x",
+    "angular-route": "1.4.x",
+    "angular-resource": "1.4.x",
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-xeditable": "~0.1.8",
     "angular-translate": "~2.4.1",
@@ -36,6 +39,6 @@
   "resolutions": {
     "d3": "~3.4.13",
     "ng-file-upload": "~2.2.2",
-    "angular": "1.3.12"
+    "angular": "1.4.8"
   }
 }
