Update to a recent mongoose version

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "md5": "",
     "body-parser": "^1.10.2",
     "compression": "^1.4.1",
     "crawler": "^0.2.7",
@@ -15,9 +14,12 @@
     "jschardet": "^1.1.0",
     "jsdom": "^1.0.3",
     "jsonwebtoken": "",
+    "kerberos": "0.0.17",
     "lodash": "^2.4.1",
+    "md5": "",
     "memwatch-next": "^0.2.10",
-    "mongoose": "^3.8.14",
+    "mongodb": "^2.1.0",
+    "mongoose": "^4.3.0",
     "multer": "^0.1.7",
     "q": "^1.0.1",
     "request": "^2.48.0",
