--- a/public/bower.json
+++ b/public/bower.json
@@ -34,11 +34,12 @@
     "angular-bootstrap-colorpicker": "~3.0.8",
     "angular-bootstrap": "~0.11.2",
     "jquery": "~2.1.1",
-    "angularjs-toaster": "~0.4.10"
+    "angularjs-toaster": "~0.4.10",
+    "ngRadialGauge": "*"
   },
   "resolutions": {
     "d3": "~3.4.13",
     "ng-file-upload": "~2.2.2",
-    "angular": "1.4.8"
+    "angular": "1.4.x"
   }
 }
