--- a/public/bower.json
+++ b/public/bower.json
@@ -35,7 +35,9 @@
     "angular-bootstrap": "~0.11.2",
     "jquery": "~2.1.1",
     "angularjs-toaster": "~0.4.10",
-    "ngRadialGauge": "*"
+    "ngRadialGauge": "*",
+    "ngclipboard": "~1.0.0",
+    "ngDraggable": "~0.1.8"
   },
   "resolutions": {
     "d3": "~3.4.13",
