remove requirejs from repository, now you should use bower to install it

--- a/bower.json
+++ b/bower.json
@@ -40,7 +40,8 @@
     "ngDraggable": "~0.1.8",
     "font-awesome": "~4.5.0",
     "bootstrap": "~3.3.6",
-    "angular-filter": "~0.5.8"
+    "angular-filter": "~0.5.8",
+    "requirejs": "~2.1.22"
   },
   "resolutions": {
     "d3": "~3.4.13",
