--- a/bower.json
+++ b/bower.json
@@ -20,8 +20,8 @@
     "tests"
   ],
   "dependencies": {
-    "ng-file-upload": "~2.2.2",
-    "jquery.easy-pie-chart": "~2.1.4",
+    "ng-file-upload": "~11.0.0",
+    "jquery.easy-pie-chart": "~2.1.6",
     "d3": "~3.5.12",
     "angular": "*",
     "angular-route": "~1.4.8",
@@ -29,10 +29,10 @@
     "angularjs-nvd3-directives": "~0.0.7",
     "angular-xeditable": "~0.1.9",
     "angular-translate": "~2.8.1",
-    "nvd3": "~1.1.15-beta",
+    "nvd3": "~1.8.1",
     "allmighty-autocomplete": "*",
-    "angular-bootstrap-colorpicker": "~3.0.8",
-    "angular-bootstrap": "~0.11.2",
+    "angular-bootstrap-colorpicker": "~3.0.22",
+    "angular-bootstrap": "~0.14.3",
     "jquery": "~2.1.4",
     "angularjs-toaster": "~0.4.10",
     "ngRadialGauge": "*",
@@ -49,8 +49,10 @@
   },
   "resolutions": {
     "d3": "~3.4.13",
-    "ng-file-upload": "~2.2.2",
+    "ng-file-upload": "~11.0.0",
     "angular": "1.4.x",
-    "angular-translate": "~2.8.1"
+    "angular-translate": "~2.8.1",
+    "nvd3": "~1.8.1",
+    "angular-bootstrap": "~0.14.3"
   }
 }
