bower updates and labels have been disabled until they are used

--- a/bower.json
+++ b/bower.json
@@ -23,13 +23,13 @@
     "ng-file-upload": "~11.0.0",
     "jquery.easy-pie-chart": "~2.1.6",
     "d3": "~3.5.12",
-    "angular": "*",
-    "angular-route": "~1.4.8",
-    "angular-resource": "~1.4.8",
-    "angularjs-nvd3-directives": "~0.0.7",
+    "angular": "latest",
+    "angular-route": "latest",
+    "angular-resource": "latest",
+    "angularjs-nvd3-directives": "latest",
     "angular-xeditable": "~0.1.9",
     "angular-translate": "~2.8.1",
-    "nvd3": "~1.8.1",
+    "nvd3": "latest",
     "allmighty-autocomplete": "*",
     "angular-bootstrap-colorpicker": "~3.0.22",
     "angular-bootstrap": "~0.14.3",
@@ -43,14 +43,14 @@
     "angular-filter": "~0.5.8",
     "requirejs": "~2.1.22",
     "AngularJS-Toaster": "angularjs-toaster#~0.4.181",
-    "angular-animate": "~1.4.8",
-    "angular-cookies": "~1.4.8",
-    "angular-sanitize": "~1.4.8"
+    "angular-animate": "latest",
+    "angular-cookies": "latest",
+    "angular-sanitize": "latest"
   },
   "resolutions": {
     "d3": "~3.4.13",
     "ng-file-upload": "~11.0.0",
-    "angular": "1.4.x",
+    "angular": "latest",
     "angular-translate": "~2.8.1",
     "nvd3": "~1.8.1",
     "angular-bootstrap": "~0.14.3"
