--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "request": "^2.48.0",
     "sax": "^0.6.1",
     "serve-static": "^1.8.1",
-    "socket.io": "^1.2.1",
+    "socket.io": "latest",
     "stack-trace": "0.0.9",
     "strip-bom": "^1.0.0",
     "underscore": "^1.7.0",
