--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "angular-expressions": "^0.3.0",
     "body-parser": "^1.10.2",
     "compression": "^1.4.1",
     "crawler": "^0.4.3",
     "crypto": "0.0.3",
     "csv-parse": "0.0.6",
+    "docxtemplater": "^2.0.0",
     "encoding": "^0.1.10",
     "express": "^4.11.1",
     "express-jwt": "",
