--- a/bower.json
+++ b/bower.json
@@ -47,7 +47,8 @@
     "angular-cookies": "latest",
     "angular-sanitize": "latest",
     "angular-i18n": "^1.5.0",
-    "angular-animate-css": "^0.0.4"
+    "angular-animate-css": "^0.0.4",
+    "angular-downloadsvg-directive": "^0.1.5"
   },
   "resolutions": {
     "d3": "~3.4.13",
