Beta download xlsx carta

--- a/config.json
+++ b/config.json
@@ -1,8 +1,12 @@
 {
 	"mongodb": {
-		"connectionString": "mongodb://mongosvr/sici"
+		"connectionString": "mongodb://mongosvr/sici",
+		"debug": false
 	},
 	"tmpdir": "tmp",
-	"publicdir": "public"
+	"publicdir": "public",
+	"templates":{
+		"xlsxcartas": "data/carta.xlsx"
+	}
 
 }
