--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"mongodb": {
-		"connectionString": "mongodb://mongosvr/sici",
-		"debug": false
+		"connectionString": "mongodb://mongosvr/sici?connectTimeoutMS=60000&socketTimeoutMS=120000",
+		"debug": true
 	},
 	"tmpdir": "tmp",
 	"publicdir": "public",
