--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-  "name": "SICI",
-  "version": "0.0.1",
+  "name": "sici",
+  "version": "0.0.2",
   "homepage": "https://github.com/Loksly/sici",
   "authors": [
     "Mario Loksly <loksly@gmail.com>",
