--- a/config.json
+++ b/config.json
@@ -1,12 +1,17 @@
 {
 	"mongodb": {
-		"connectionString": "mongodb://mongosvr/sici?connectTimeoutMS=60000&socketTimeoutMS=120000",
+		"connectionString": "mongodb://mongosvr/sici_test?connectTimeoutMS=60000&socketTimeoutMS=120000",
 		"debug": true
 	},
 	"tmpdir": "tmp",
 	"publicdir": "public",
 	"templates":{
 		"xlsxcartas": "data/carta.xlsx"
+	},
+	"session": {
+		"timeout": 30000
+	},
+	"urls": {
+		"procedimiento": "http://www.carm.es/web/pagina?IDTIPO=240&IDCONTENIDO="
 	}
-
 }
