--- a/package.json
+++ b/package.json
@@ -34,11 +34,16 @@
     "stack-trace": "0.0.9",
     "strip-bom": "^1.0.0",
     "underscore": "^1.7.0",
+    "uniq": "^1.0.1",
     "v8-profiler": "^5.2.2",
     "xlsx": "^0.7.12",
     "zombie": "^2.0.8"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "eslint": "^3.16.1",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-config-google": "^0.7.1",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
