--- a/package.json
+++ b/package.json
@@ -1,49 +1,53 @@
 {
-  "name": "SICI",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "angular-expressions": "^0.3.0",
-    "body-parser": "^1.10.2",
-    "compression": "^1.4.1",
-    "crawler": "^0.4.3",
-    "crypto": "0.0.3",
-    "csv-parse": "0.0.6",
-    "docxtemplater": "^2.0.0",
-    "docxtemplater-image-module": "^1.0.0",
-    "encoding": "^0.1.10",
-    "exceljs": "^0.2.6",
-    "express": "^4.11.1",
-    "express-jwt": "",
-    "jschardet": "^1.1.0",
-    "jsdom": "^1.0.3",
-    "jsonwebtoken": "",
-    "kerberos": "0.0.17",
-    "lodash": "^2.4.1",
-    "mathjs": "^2.5.0",
-    "md5": "",
-    "memwatch-next": "^0.2.10",
-    "mongodb": "^2.2.24",
-    "mongoose": "^4.3.0",
-    "multer": "^0.1.7",
-    "q": "^1.0.1",
-    "request": "^2.48.0",
-    "sax": "^0.6.1",
-    "serve-static": "^1.8.1",
-    "socket.io": "latest",
-    "stack-trace": "0.0.9",
-    "strip-bom": "^1.0.0",
-    "underscore": "^1.7.0",
-    "uniq": "^1.0.1",
-    "v8-profiler": "^5.2.2",
-    "xlsx": "^0.7.12",
-    "zombie": "^2.0.8"
-  },
-  "devDependencies": {
-    "chai": "^3.5.0",
-    "eslint": "^3.16.1",
-    "eslint-config-airbnb-base": "^11.1.0",
-    "eslint-config-google": "^0.7.1",
-    "eslint-plugin-import": "^2.2.0"
-  }
+	"name": "SICI",
+	"version": "0.0.1",
+	"private": true,
+	"dependencies": {
+		"angular-expressions": "^0.3.0",
+		"body-parser": "^1.10.2",
+		"compression": "^1.4.1",
+		"crawler": "^0.4.3",
+		"crypto": "0.0.3",
+		"csv-parse": "0.0.6",
+		"docxtemplater": "^2.0.0",
+		"docxtemplater-image-module": "^1.0.0",
+		"encoding": "^0.1.10",
+		"exceljs": "^0.2.6",
+		"express": "^4.11.1",
+		"express-jwt": "",
+		"jschardet": "^1.1.0",
+		"jsdom": "^1.0.3",
+		"jsonwebtoken": "",
+		"kerberos": "0.0.17",
+		"lodash": "^2.4.1",
+		"mathjs": "^2.5.0",
+		"md5": "",
+		"memwatch-next": "^0.2.10",
+		"mongodb": "^2.2.24",
+		"mongoose": "^4.3.0",
+		"multer": "^0.1.7",
+		"q": "^1.0.1",
+		"request": "^2.48.0",
+		"sax": "^0.6.1",
+		"serve-static": "^1.8.1",
+		"socket.io": "latest",
+		"stack-trace": "0.0.9",
+		"strip-bom": "^1.0.0",
+		"underscore": "^1.7.0",
+		"uniq": "^1.0.1",
+		"v8-profiler": "^5.2.2",
+		"xlsx": "^0.7.12",
+		"zombie": "^2.0.8"
+	},
+	"devDependencies": {
+		"chai": "^3.5.0",
+		"eslint": "^3.16.1",
+		"eslint-config-airbnb-base": "^11.1.0",
+		"eslint-config-google": "^0.7.1",
+		"eslint-plugin-import": "^2.2.0"
+	},
+	"scripts": {
+		"start": "NODE_ENV=production forever ./app.js",
+		"development": "NODE_ENV=development node ./app.js"
+	}
 }
