--- a/config.json
+++ b/config.json
@@ -13,5 +13,6 @@
 	},
 	"urls": {
 		"procedimiento": "http://www.carm.es/web/pagina?IDTIPO=240&IDCONTENIDO="
-	}
+	},
+	"userAgent": "Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/45.0.2454.85 Safari/537.36"
 }
