--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "md5": "",
     "memwatch-next": "^0.2.10",
     "mongodb": "^2.2.25",
-    "mongoose": "^4.9.1",
+    "mongoose": "^4.9.2",
     "multer": "^0.1.7",
+    "nodemailer": "^3.1.8",
     "q": "^1.0.1",
     "request": "^2.48.0",
     "sax": "^0.6.1",
