--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
 	"mongodb": {
 		"connectionString": "mongodb://mongosvr/sici_test?connectTimeoutMS=60000&socketTimeoutMS=120000",
-		"debug": true
+		"debug": false
 	},
 	"tmpdir": "tmp",
 	"publicdir": "public",
