--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,6 @@
   ],
   "dependencies": {
     "ng-file-upload": "~11.0.0",
-    "jquery.easy-pie-chart": "~2.1.6",
     "angular": "latest",
     "angular-route": "latest",
     "angular-resource": "latest",
@@ -35,7 +34,6 @@
     "ngRadialGauge": "*",
     "ngclipboard": "~1.0.0",
     "ngDraggable": "~0.1.8",
-    "font-awesome": "~4.5.0",
     "bootstrap": "~3.3.6",
     "angular-filter": "~0.5.8",
     "requirejs": "~2.1.22",
@@ -48,7 +46,8 @@
     "angular-downloadsvg-directive": "^0.1.5",
     "nvd3": "^1.8.5",
     "d3": "^4.7.3",
-    "angularjs-nvd3-directives": "^0.0.7"
+    "angular-loading-bar": "^0.9.0",
+    "font-awesome": "^4.7.0"
   },
   "resolutions": {
     "d3": "^3.4.4",
