--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"mongodb": {
-		"connectionString": "mongodb://mongosvr/sici_test?connectTimeoutMS=60000&socketTimeoutMS=120000",
+		"connectionString": "mongodb://mongosvr/sici?connectTimeoutMS=60000&socketTimeoutMS=120000",
 		"debug": false
 	},
 	"tmpdir": "tmp",
