--- a/package.json
+++ b/package.json
@@ -42,14 +42,18 @@
     "zombie": "^5.0.5"
   },
   "devDependencies": {
+    "bower": "^1.8.2",
     "chai": "^3.5.0",
-    "eslint": "^3.16.1",
+    "eslint": "^3.19.0",
     "eslint-config-airbnb-base": "^11.1.0",
     "eslint-config-google": "^0.7.1",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "forever": "^0.15.3",
+    "mocha": "^3.4.2"
   },
   "scripts": {
     "start": "NODE_ENV=production forever ./app.js",
-    "development": "NODE_ENV=development node ./app.js"
+    "development": "NODE_ENV=development node ./app.js",
+    "test": "mocha"
   }
 }
