* Upgraded mathjs, md5 and express-jwt libraries. * Added a security improvement when granting permissions. It was TOO naive. * Small eslint style change on app.js file.

--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "encoding": "^0.1.10",
     "exceljs": "^0.2.6",
     "express": "^4.11.1",
-    "express-jwt": "",
+    "express-jwt": "^5.3.0",
     "jschardet": "^1.1.0",
     "jsdom": "^1.0.3",
     "jsonwebtoken": "",
     "kerberos": "0.0.17",
     "lodash": "^2.4.1",
-    "mathjs": "^2.5.0",
-    "md5": "",
+    "mathjs": "^3.18.0",
+    "md5": "^2.2.1",
     "memwatch-next": "^0.2.10",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.2",
