Eliminación del código de memleak

--- a/bower.json
+++ b/bower.json
@@ -21,9 +21,9 @@
   ],
   "dependencies": {
     "ng-file-upload": "~11.0.0",
-    "angular": "latest",
-    "angular-route": "latest",
-    "angular-resource": "latest",
+    "angular": "^1.6.4",
+    "angular-route": "^1.6.4",
+    "angular-resource": "^1.6.4",
     "angular-xeditable": "~0.1.9",
     "angular-translate": "~2.8.1",
     "allmighty-autocomplete": "*",
@@ -38,9 +38,9 @@
     "angular-filter": "~0.5.8",
     "requirejs": "~2.1.22",
     "AngularJS-Toaster": "angularjs-toaster#~0.4.181",
-    "angular-animate": "latest",
-    "angular-cookies": "latest",
-    "angular-sanitize": "latest",
+    "angular-animate": "^1.6.4",
+    "angular-cookies": "^1.6.4",
+    "angular-sanitize": "^1.6.4",
     "angular-i18n": "^1.5.0",
     "angular-animate-css": "^0.0.4",
     "angular-downloadsvg-directive": "^0.1.5",
@@ -52,7 +52,7 @@
   "resolutions": {
     "d3": "^3.4.4",
     "ng-file-upload": "~11.0.0",
-    "angular": "1.6.9",
+    "angular": ">=1.2.26 <=1.5",
     "angular-translate": "~2.8.1",
     "nvd3": "^1.8.5",
     "angular-bootstrap": "~0.14.3"
